tests/NormalTests/paczka1/fuzzy1/90432269.err
Error in line 3: 0rkDO88W9 S338 62,2
Error in line 7: S326 S593 25,0
Error in line 8: S326 S338 22,9
Error in line 11: S326 S593 564,6
Error in line 18: gfQJ1p S226 38,8
Error in line 14: 9MG S226 42,6
